Learning and corrections done
Major mistake is me misspelling display to dislay.
Also too much clutter in my code and self check mistakes.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -11,31 +12,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: -20px;
+  margin-bottom: 32px;
 }
 
 .container {
- 
-  flex-wrap: wrap;
-  height: auto;
-  width: auto;
-  dislay: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 8px;
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
 
-.item{
-  width: 200px;
-  height: 200px;
-  border: 4px solid darkslategray;
-  background: skyblue;
-  margin: 52px;
-  justify-content: space-between;
-  align-items: center;
+.item {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
